--- a/css/estilopersonal.css
+++ b/css/estilopersonal.css
@@ -128,6 +128,8 @@ h2 {
 
 p {
     color: rgb(253, 253, 253);
+    font-family: 'Courgette', cursive;
+    font-family: 'Shadows Into Light Two', cursive;
     line-height: 1.3em;
     width: 100%;
     max-width: 850px;
