--- a/css/estilopersonal.css
+++ b/css/estilopersonal.css
@@ -148,7 +148,7 @@ body {
 }
 
 .footer {
-    background: #333232;
+    background: #1f1e1e;
     padding: 2rem 0;
     text-align: center;
     margin-top: 6rem;
