--- a/css/carta.css
+++ b/css/carta.css
@@ -12,7 +12,7 @@ body {
 }
 
 #encabezado {
-    border: 1px solid blue;
+    border: 0px solid blue;
     font-style: italic;
     text-align: right;
     line-height: 1.5;
@@ -23,13 +23,13 @@ body {
 }
 
 #fecha {
-    border: 1px solid red;
+    border: 0px solid red;
     margin-top: 10px;
     text-align: right;
 }
 
 #direccion {
-    border: 1px solid green;
+    border: 0px solid green;
     margin-top: 10px;
     font-style: italic;
     line-height: 1.5;
@@ -40,14 +40,14 @@ body {
 }
 
 #asunto {
-    border: 1px solid yellow;
+    border: 0px solid yellow;
     margin-top: 10px;
     font-weight: bold;
     font-size: 22px;
 }
 
 #cuerpo {
-    border: 1px solid rgb(173, 10, 173);
+    border: 0px solid rgb(173, 10, 173);
     margin-top: 10px;
 }
 
@@ -68,13 +68,18 @@ body {
     margin-left: 50px;
 }
 
+#correodos {
+    border: 0px solid rgb(214, 13, 13);
+    margin-top: 10px;
+}
+
 #remitente {
-    border: 1px solid black;
+    border: 0px solid black;
     margin-top: 90px;
 }
 
 #piepagina {
-    border: 1px solid rgb(7, 170, 69);
+    border: 0px solid rgb(7, 170, 69);
     margin-top: 15px;
 }
 
