--- a/css/estilo.css
+++ b/css/estilo.css
@@ -415,7 +415,7 @@ section {
 /*Formulario Contact*/
 
 #contacto {
-    background: linear-gradient(to left, #000428, #004e92);
+    background: linear-gradient(to left, #0f0c29, #302b63, #24243e);
     background-size: cover;
     padding-top: 90px;
     min-height: 700px;
