--- a/css/estilo.css
+++ b/css/estilo.css
@@ -50,6 +50,10 @@ section {
     background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
 }
 
+.bg-light-gris {
+    background: linear-gradient(to left, #bdc3c7, #2c3e50);
+}
+
 .bg-darkfotter {
     background-color: #1a1a1a !important;
 }
@@ -483,6 +487,12 @@ section {
 
 .album h1 {
     text-align: center;
+}
+
+.album p {
+    color: white;
+    font-size: 20px;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 .video {
